fixed style z-index bug

--- a/src/ui/views/Send/style.less
+++ b/src/ui/views/Send/style.less
@@ -10,6 +10,7 @@
         margin-top: 0;
         margin-left: 5%;
         padding-right: 5px;
+        z-index: 9;
 
         .from-container {
             width: 100%;
@@ -127,6 +128,7 @@
             .recent-body {
                 max-height: 150px;
                 overflow-y: auto;
+                background-color: #fff;
                 .recent-item {
                     font-family: 'MontserratBold';
                     font-style: normal;
